# Nylium

./: .gitignore  nylium.cpp
CompilerBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NyliumCompiler.sln  NyliumCompiler.vcxproj  NyliumCompiler.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CompilerBuild/Debug/Test/: TestCode.nylium
CompilerBuild/NyliumCompiler.dir/Debug/: NyliumCompiler.exe.recipe  NyliumCompiler.ilk
CompilerBuild/NyliumCompiler.dir/Debug/NyliumCompiler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  NyliumCompiler.lastbuildstate  NyliumCompiler.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CompilerBuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
CompilerBuild/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
CompilerBuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
CompilerBuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
compiler/: CMakeLists.txt  nylium.cpp  nylium.h
compiler/compiler/: assembler.h
compiler/compiler/error_handling/: CompileError.cpp  CompileError.hpp
compiler/compiler/error_handling/errors/: CB001.cpp  CB001.hpp  CB002.hpp  CB003.hpp  CB004.cpp  CB004.hpp  CB005.hpp  CB006.hpp  CB007.hpp  CB008.hpp  CB009.hpp  CB010.hpp  CB998.hpp  CB999.hpp  LS001.hpp  LS002.hpp  LS003.hpp  LS004.hpp  LS005.hpp  LS006.hpp  LS007.hpp
compiler/compiler/loader/: CharacterSequences.hpp  CodeBodies.hpp  LoadLayer.hpp  Loader.cpp  Loader.hpp  TODO.txt  code_bodies.hpp  code_bodies_del.hpp  code_body.cpp  code_body.h  code_body_old.cpp  code_body_old.h  compiler_error.h  default_types_del.hpp  interface.h  loader.h  syntax.cpp  syntax.h  syntax_loader.cpp
compiler/compiler/loader/character_sequences/: Bracket.cpp  Bracket.hpp  EmptySeparator.hpp  End.hpp  IllegalCharSequence.cpp  IllegalCharSequence.hpp  ListSeparator.hpp  Name.hpp  NyliumCharSequence.cpp  NyliumCharSequence.hpp  Operator.hpp  Value.cpp  Value.hpp  Word.hpp
compiler/compiler/loader/code_bodies/: CodeLine.hpp  CodeObject.cpp  CodeObject.hpp  Declaration.cpp  Declaration.hpp  Operation.cpp  Operation.hpp  PendingDeclaration.cpp  PendingDeclaration.hpp  Type.hpp  ValueHolder.cpp  ValueHolder.hpp
compiler/compiler/loader/code_bodies/compilable/: AssignOperation.cpp  AssignOperation.hpp  CallOperation.cpp  CallOperation.hpp  CastingOperation.cpp  CastingOperation.hpp  FieldDeclaration.cpp  FieldDeclaration.hpp  FunctionCallOperation.cpp  FunctionCallOperation.hpp  FunctionDeclaration.cpp  FunctionDeclaration.hpp  Keyword.cpp  Keyword.hpp  Literal.cpp  Literal.hpp  NamespaceDeclaration.cpp  NamespaceDeclaration.hpp  ReferenceDeclaration.hpp  Scope.cpp  Scope.hpp  TypeDeclaration.cpp  TypeDeclaration.hpp
compiler/compiler/loader/load_iterations/: 0_CharSequences.cpp  0_CharSequences.hpp  1_CodeBodies.cpp  1_CodeBodies.hpp  2_InternalLinking.cpp  2_InternalLinking.hpp
compiler/compiler/loader/native/keywords/: ElseKeyword.cpp  ElseKeyword.hpp  ForKeyword.cpp  ForKeyword.hpp  IfKeyword.cpp  IfKeyword.hpp  Keywords.cpp  Keywords.hpp  WhileKeyword.cpp  WhileKeyword.hpp
compiler/compiler/loader/native/types/: BoolType.cpp  BoolType.hpp  ClassType.cpp  ClassType.hpp  Int32Type.hpp  Types.cpp  Types.hpp
compiler/compiler/loader/project/: Interface.cpp  Interface.hpp  LoadLayer_del.hpp  Project.cpp  Project.hpp
compiler/compiler/loader/utils/: DeclarationMap.cpp  DeclarationMap.hpp  DeclarationSearch.hpp
compiler/compiler/preassembler/: Preassembler.cpp  Preassembler.hpp
compiler/compiler/preassembler/compilable/: CompilableBody.cpp  CompilableBody.hpp  PendingReference.hpp
compiler/compiler/preassembler/data/: AsmInstruction.hpp  AsmStorage.cpp  AsmStorage.hpp  AsmValue.hpp  AssemblyRepresentation.hpp  MemoryLocation.hpp  Registers.cpp  Registers.hpp
compiler/compiler/preassembler/instructions/: MovInstruction.hpp
compiler/compiler/preassembler/utils/: Names.cpp  Names.hpp
compiler/datautils/: linked_tree.hpp  linked_tree_del.hpp  tree.h
compiler/fileutils/: bytes.h  file_io.cpp  file_io.h  file_io.hpp  io_fstream.cpp  serializer.cpp  serializer.h  simple_yaml.cpp  simple_yaml.h
compiler/log/: ansi.h  logger.cpp  logger.h  logger.hpp
